name:           protocol-buffers
version:        1.8.3
cabal-version:  >= 1.6
build-type:     Simple
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2008-2010 Christopher Edward Kuklewicz
author:         Christopher Edward Kuklewicz
maintainer:     Chris Kuklewicz <protobuf@personal.mightyreason.com>
stability:      Good
homepage:       http://hackage.haskell.org/cgi-bin/hackage-scripts/package/protocol-buffers
package-url:    http://code.haskell.org/protocol-buffers/
synopsis:       Parse Google Protocol Buffer specifications
description:    Parse proto files and generate Haskell code.
category:       Text
Tested-With:    GHC == 7.0.2
--data-files:     
extra-source-files: TODO
                    README
-- extra-tmp-files:

flag small_base
    description: Choose the new smaller, split-up base package.

Library
  -- Added -fspec-constr-count=10 to quiet ghc-7.0.2
  ghc-options:  -Wall -O2 -fspec-constr-count=10 -fno-warn-orphans
  exposed-modules: Text.ProtocolBuffers
                   Text.ProtocolBuffers.Basic
                   Text.ProtocolBuffers.Default
                   Text.ProtocolBuffers.Extensions
                   Text.ProtocolBuffers.Get
                   Text.ProtocolBuffers.Header
                   Text.ProtocolBuffers.Mergeable
                   Text.ProtocolBuffers.Reflections
                   Text.ProtocolBuffers.Unknown
                   Text.ProtocolBuffers.WireMessage
                   Text.ProtocolBuffers.Identifiers

  build-depends: containers,
                 bytestring,
                 array,
                 filepath,
                 directory,
                 mtl,
                 binary, parsec, utf8-string, haskell-src,
                 QuickCheck

  if flag(small_base)
    build-depends: base == 4.*, syb
  else
    build-depends: base == 3.*

-- Most of these are needed for protocol-buffers (Get and WireMessage.hs)
  extensions:      DeriveDataTypeable,
                   EmptyDataDecls,
                   FlexibleInstances,
                   GADTs,
                   GeneralizedNewtypeDeriving,
                   MagicHash,
                   PatternGuards,
                   RankNTypes,
                   ScopedTypeVariables,
                   TypeSynonymInstances,
                   MultiParamTypeClasses,
                   FlexibleContexts,
                   FunctionalDependencies
