name:           protocol-buffers
version:        2.0.6
cabal-version:  >= 1.6
build-type:     Simple
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2008-2011 Christopher Edward Kuklewicz
author:         Christopher Edward Kuklewicz
maintainer:     Chris Kuklewicz <protobuf@personal.mightyreason.com>
stability:      Good
homepage:       http://hackage.haskell.org/cgi-bin/hackage-scripts/package/protocol-buffers
package-url:    http://code.haskell.org/protocol-buffers/
synopsis:       Parse Google Protocol Buffer specifications
description:    Parse proto files and generate Haskell code.
category:       Text
Tested-With:    GHC == 7.0.3
extra-source-files: TODO
                    README

flag small_base
    description: Choose the new smaller, split-up base package.

Library
  -- Added -fspec-constr-count=10 to quiet ghc-7.0.2.
  ghc-options:  -Wall -O2 -fspec-constr-count=10 
  ghc-prof-options: -auto-all -prof
  exposed-modules: Text.ProtocolBuffers
                   Text.ProtocolBuffers.Basic
                   Text.ProtocolBuffers.Extensions
                   Text.ProtocolBuffers.Get
                   Text.ProtocolBuffers.Header
                   Text.ProtocolBuffers.Identifiers
                   Text.ProtocolBuffers.Reflections
                   Text.ProtocolBuffers.Unknown
                   Text.ProtocolBuffers.WireMessage

  build-depends: array,
                 binary,
                 bytestring,
                 containers,
                 directory,
                 filepath,
                 mtl,
                 utf8-string

  if flag(small_base)
    build-depends: base == 4.*, syb
  else
    build-depends: base == 3.*

-- Most of these are needed for protocol-buffers (Get and WireMessage.hs)
-- Nothing especially hazardous in this list
  extensions:      BangPatterns,
                   CPP,
                   DeriveDataTypeable,
                   EmptyDataDecls,
                   FlexibleInstances,
                   FunctionalDependencies,
                   GADTs,
                   GeneralizedNewtypeDeriving,
                   MagicHash,
                   MultiParamTypeClasses,
                   PatternGuards,
                   RankNTypes,
                   RecordWildCards
                   ScopedTypeVariables,
                   TypeSynonymInstances

-- {-
--                   FlexibleContexts,
--                   NamedFieldPuns,
--                   PatternGuards,
-- BangPatterns
-- CPP
-- DeriveDataTypeable
-- FlexibleInstances
-- FunctionalDependencies
-- GADTs
-- GeneralizedNewtypeDeriving
-- MagicHash
-- MultiParamTypeClasses
-- RankNTypes
-- ScopedTypeVariables
-- TypeSynonymInstances-}