name:           protocol-buffers-descriptor
version:        1.4.0
cabal-version:  >= 1.6
build-type:     Simple
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2008 Christopher Edward Kuklewicz
author:         Christopher Edward Kuklewicz
maintainer:     Chris Kuklewicz <protobuf@personal.mightyreason.com>
stability:      Experimental
homepage:       http://hackage.haskell.org/cgi-bin/hackage-scripts/package/protocol-buffers
package-url:    http://darcs.haskell.org/packages/protocol-buffers2/
synopsis:       Text.DescriptorProto.Options and Google Protocol Buffer specifications
description:    Uses protocol-buffers package
category:       Text
Tested-With:    GHC ==6.8.3
data-files:     descriptor.proto
extra-source-files: Setup.hs
-- extra-tmp-files:

flag small_base
    description: Choose the new smaller, split-up base package.

Library
  ghc-options:  -O2
  exposed-modules: Text.DescriptorProtos.Options
                   Text.DescriptorProtos
                   Text.DescriptorProtos.DescriptorProto
                   Text.DescriptorProtos.DescriptorProto.ExtensionRange
                   Text.DescriptorProtos.EnumDescriptorProto
                   Text.DescriptorProtos.EnumOptions
                   Text.DescriptorProtos.EnumValueDescriptorProto
                   Text.DescriptorProtos.EnumValueOptions
                   Text.DescriptorProtos.FieldDescriptorProto
                   Text.DescriptorProtos.FieldDescriptorProto.Label
                   Text.DescriptorProtos.FieldDescriptorProto.Type
                   Text.DescriptorProtos.FieldOptions
                   Text.DescriptorProtos.FieldOptions.CType
                   Text.DescriptorProtos.FileDescriptorProto
                   Text.DescriptorProtos.FileDescriptorSet
                   Text.DescriptorProtos.FileOptions
                   Text.DescriptorProtos.FileOptions.OptimizeMode
                   Text.DescriptorProtos.MessageOptions
                   Text.DescriptorProtos.MethodDescriptorProto
                   Text.DescriptorProtos.MethodOptions
                   Text.DescriptorProtos.ServiceDescriptorProto
                   Text.DescriptorProtos.ServiceOptions
                   Text.DescriptorProtos.UninterpretedOption
                   Text.DescriptorProtos.UninterpretedOption.NamePart

  build-depends:   protocol-buffers == 1.4.0,
                   containers,
                   bytestring

  if flag(small_base)
        build-depends: base == 4.*
  else
        build-depends: base == 3.*

  extensions:      DeriveDataTypeable,
                   EmptyDataDecls,
                   FlexibleInstances,
                   MultiParamTypeClasses,
                   FunctionalDependencies,
                   FlexibleContexts

