name:           hprotoc
version:        2.0.6
cabal-version:  >= 1.6
build-type:     Simple
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2008-2011 Christopher Edward Kuklewicz
author:         Christopher Edward Kuklewicz
maintainer:     Chris Kuklewicz <protobuf@personal.mightyreason.com>
stability:      Experimental
homepage:       http://hackage.haskell.org/package/hprotoc
package-url:    http://code.haskell.org/protocol-buffers/
synopsis:       Parse Google Protocol Buffer specifications
description:    Parse language defined at "http://code.google.com/apis/protocolbuffers/docs/proto.html" and general haskell code to implement messages.
category:       Text
Tested-With:    GHC == 7.0.3
extra-source-files: README,
                    google-proto-files/google/protobuf/descriptor.proto,
                    google-proto-files/google/protobuf/plugin.proto

flag small_base
    description: Choose the new smaller, split-up base package.

Executable hprotoc
  build-depends:   protocol-buffers == 2.0.6,
                   protocol-buffers-descriptor == 2.0.6
  Main-Is:         Text/ProtocolBuffers/ProtoCompile.hs
  Hs-Source-Dirs:  .,
                   protoc-gen-haskell
  build-tools:     alex
  ghc-options:     -O2 -Wall -fspec-constr-count=10
  ghc-prof-options: -O2 -auto-all -prof
  build-depends:   array,
                   binary,
                   bytestring,
                   containers,
                   directory >= 1.0.0.1,
                   filepath >= 1.1.0.0,
                   haskell-src-exts >= 1.7.0,
                   mtl,
                   parsec < 3,
                   utf8-string

  if flag(small_base)
        build-depends: base == 4.*
  else
        build-depends: base == 3.*

  other-modules:   Paths_hprotoc
                   Text.Google.Protobuf.Compiler
                   Text.Google.Protobuf.Compiler.CodeGeneratorRequest
                   Text.Google.Protobuf.Compiler.CodeGeneratorResponse
                   Text.Google.Protobuf.Compiler.CodeGeneratorResponse.File
                   Text.ProtocolBuffers.ProtoCompile.BreakRecursion
                   Text.ProtocolBuffers.ProtoCompile.Gen
                   Text.ProtocolBuffers.ProtoCompile.Identifiers
                   Text.ProtocolBuffers.ProtoCompile.Instances
                   Text.ProtocolBuffers.ProtoCompile.Lexer
                   Text.ProtocolBuffers.ProtoCompile.MakeReflections
                   Text.ProtocolBuffers.ProtoCompile.Parser
                   Text.ProtocolBuffers.ProtoCompile.Resolve
  extensions:      DeriveDataTypeable,
                   EmptyDataDecls,
                   FlexibleContexts 
                   FlexibleInstances,
                   FunctionalDependencies,
                   GADTs,
                   GeneralizedNewtypeDeriving,
                   MagicHash,
                   MultiParamTypeClasses,
                   PatternGuards,
                   RankNTypes,
                   RecursiveDo,
                   ScopedTypeVariables,
                   TypeSynonymInstances
--                   PatternSignatures
