name:           hprotoc
version:        2.4.13
cabal-version:  >= 1.6
build-type:     Simple
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2008-2015 Christopher Edward Kuklewicz
author:         Christopher Edward Kuklewicz
maintainer:     Timo von Holtz <tvh@tvholtz.de>, Kostiantyn Rybnikov <k-bx@k-bx.com>
homepage:       https://github.com/k-bx/protocol-buffers
package-url:    http://hackage.haskell.org/package/hprotoc
synopsis:       Parse Google Protocol Buffer specifications
description:    Parse language defined at <http://code.google.com/apis/protocolbuffers/docs/proto.html> and general haskell code to implement messages.
category:       Text
extra-source-files: README,
                    google-proto-files/google/protobuf/descriptor.proto,
                    google-proto-files/google/protobuf/plugin.proto
Tested-With: GHC == 8.0.2, GHC == 8.2.1, GHC == 8.4.2, GHC == 8.6.2
source-repository head
  type: git
  location: git://github.com/k-bx/protocol-buffers.git

Executable hprotoc
  build-depends:   protocol-buffers == 2.4.13,
                   protocol-buffers-descriptor == 2.4.13
  Main-Is:         Text/ProtocolBuffers/ProtoCompile.hs
  Hs-Source-Dirs:  .,
                   protoc-gen-haskell
  build-tools:     alex
  ghc-options:     -O2 -Wall -fspec-constr-count=10
  -- ghc-prof-options: -O2 -auto-all -prof
  build-depends:   base >= 4.9.0 && < 5,
                   array,
                   binary,
                   bytestring,
                   containers,
                   directory >= 1.0.0.1,
                   filepath >= 1.1.0.0,
                   haskell-src-exts >= 1.18 && < 1.23,
                   mtl,
                   parsec,
                   utf8-string

  other-modules:   Paths_hprotoc
                   Text.Google.Protobuf.Compiler
                   Text.Google.Protobuf.Compiler.CodeGeneratorRequest
                   Text.Google.Protobuf.Compiler.CodeGeneratorResponse
                   Text.Google.Protobuf.Compiler.CodeGeneratorResponse.File
                   Text.ProtocolBuffers.ProtoCompile.BreakRecursion
                   Text.ProtocolBuffers.ProtoCompile.Gen
                   Text.ProtocolBuffers.ProtoCompile.Identifiers
                   Text.ProtocolBuffers.ProtoCompile.Instances
                   Text.ProtocolBuffers.ProtoCompile.Lexer
                   Text.ProtocolBuffers.ProtoCompile.MakeReflections
                   Text.ProtocolBuffers.ProtoCompile.Parser
                   Text.ProtocolBuffers.ProtoCompile.Resolve
  extensions:      DeriveDataTypeable,
                   EmptyDataDecls,
                   FlexibleContexts,
                   FlexibleInstances,
                   FunctionalDependencies,
                   GADTs,
                   GeneralizedNewtypeDeriving,
                   MagicHash,
                   MultiParamTypeClasses,
                   PatternGuards,
                   RankNTypes,
                   RecursiveDo,
                   ScopedTypeVariables,
                   TypeSynonymInstances

Library
  build-depends:   protocol-buffers == 2.4.13,
                   protocol-buffers-descriptor == 2.4.13
  Hs-Source-Dirs:  .,
                   protoc-gen-haskell
  build-tools:     alex
  ghc-options:     -O2 -Wall -fspec-constr-count=10
  -- ghc-prof-options: -O2 -auto-all -prof
  build-depends:   base >= 4.9.0 && < 5,
                   array,
                   binary,
                   bytestring,
                   containers,
                   directory >= 1.0.0.1,
                   filepath >= 1.1.0.0,
                   haskell-src-exts >= 1.18 && < 1.23,
                   mtl,
                   parsec,
                   utf8-string

  exposed-modules: Text.ProtocolBuffers.ProtoCompile.Parser
                   Text.ProtocolBuffers.ProtoCompile.Resolve
                   Text.ProtocolBuffers.ProtoCompile.MakeReflections

  other-modules:   Paths_hprotoc
                   Text.Google.Protobuf.Compiler
                   Text.Google.Protobuf.Compiler.CodeGeneratorRequest
                   Text.Google.Protobuf.Compiler.CodeGeneratorResponse
                   Text.Google.Protobuf.Compiler.CodeGeneratorResponse.File
                   Text.ProtocolBuffers.ProtoCompile.BreakRecursion
                   Text.ProtocolBuffers.ProtoCompile.Gen
                   Text.ProtocolBuffers.ProtoCompile.Identifiers
                   Text.ProtocolBuffers.ProtoCompile.Instances
                   Text.ProtocolBuffers.ProtoCompile.Lexer
  extensions:      DeriveDataTypeable,
                   EmptyDataDecls,
                   FlexibleContexts
                   FlexibleInstances,
                   FunctionalDependencies,
                   GADTs,
                   GeneralizedNewtypeDeriving,
                   MagicHash,
                   MultiParamTypeClasses,
                   PatternGuards,
                   RankNTypes,
                   RecursiveDo,
                   ScopedTypeVariables,
                   TypeSynonymInstances
