name:                hs-lens
version:             0.1.0.0
synopsis:            Haskell oneof example with lenses
description:         Haskell oneof example with lenses
homepage:            https://github.com/k-bx/protocol-buffers
license:             BSD3
license-file:        ../../../LICENSE
author:              Kirill Zaborsky
maintainer:          Kostiantyn Rybnikov <k-bx@k-bx.com>
copyright:           2016 Kirill Zaborsky
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable encode
  hs-source-dirs:      src
  main-is:             encode.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , protocol-buffers
                     , lens

executable decode
  hs-source-dirs:      src
  main-is:             decode.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , protocol-buffers
                     , lens
